src/test/resources/plugin/inline/pass/minimal.vpr
 field f: Int

 inline predicate F(this: Ref) {
   acc(this.f)
 }

 inline predicate loop(this: Ref) {
   loop(this) && F(this)
 }

 method nestedPred(this: Ref)
   requires loop(this)
 {
   unfold loop(this)
   unfold F(this)
   this.f := 0
 }
