src/test/resources/plugin/inline/errors/perm_expr.vpr
inline predicate P() {
  true
}

method test() {
  //:: ExpectedOutput(consistency.error)
  assert perm(P()) == write
}